# parsl-aws-provider

./: .coveragerc  .gitignore  .parslaws  .pre-commit-config.yaml  .ruff.toml  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_ROADMAP.md  LICENSE  Makefile  NEXT_STEPS.md  PHASE1_SUCCESS_PROOF.md  README.md  README_PHASE1.md  ROADMAP.md  SECURITY.md  SECURITY_HARDENING_PLAN.md  TESTING.md  TESTING_RESULTS.md  TEST_COVERAGE.md  commitlint.config.js  docker-compose.localstack.yml  pyproject.toml  requirements.txt  security_integration_results_security-test-8d652063.json  setup.py  test_functional_basic.py  test_integration_full.py  test_resource_lifecycle.py  test_security_integration.py  test_security_real.py  test_security_standalone.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
archive/: README.md  ROADMAP.md
docs/: README.md  advanced_usage.md  api.rst  architecture.md  ci_cd.md  conf.py  examples.md  getting_started.md  globus_compute.md  index.rst  localstack_testing.md  make.bat  makefile  network-prerequisites.md  operating_modes.md  release_notes.md  roadmap.md  security.md  spot_fleet.md  state_persistence.md  testing.rst  troubleshooting.md
docs/advanced_topics/: cost_optimization.rst  gpu_computing.rst  index.rst  mpi_workflows.rst
docs/api/: index.rst
docs/developer/: index.rst
docs/examples/: index.rst
docs/getting_started/: basic_concepts.rst  index.rst  installation.rst  quickstart.rst
docs/operating_modes/: detached_mode.rst  index.rst  serverless_mode.rst  standard_mode.rst
docs/project/: index.rst
docs/source/: conf.py  index.rst
docs/source/user/: installation.rst  quickstart.rst
docs/user_guide/: configuration.rst  index.rst  resource_management.rst  spot_handling.rst  state_persistence.rst
examples/: README.md  basic_usage.py  detached_mode.py  parsl_aws_integration.py  serverless_mode.py  serverless_spot_fleet_example.py  spot_fleet_example.py  spot_interruption_example.py  standard_mode.py
parsl_ephemeral_aws/: __init__.py  constants.py  error_handling.py  exceptions.py  globus_compute.py  provider.py
parsl_ephemeral_aws/compute/: __init__.py  ec2.py  ecs.py  lambda_func.py  spot_fleet.py  spot_fleet_cleanup.py  spot_interruption.py
parsl_ephemeral_aws/config/: __init__.py  security_config.py
parsl_ephemeral_aws/modes/: __init__.py  base.py  detached.py  serverless.py  standard.py
parsl_ephemeral_aws/network/: __init__.py  security.py  vpc.py
parsl_ephemeral_aws/security/: __init__.py  audit.py  cidr_manager.py  credential_manager.py  encryption.py  network_policy.py
parsl_ephemeral_aws/state/: __init__.py  base.py  file.py  parameter_store.py  s3.py
parsl_ephemeral_aws/templates/: __init__.py
parsl_ephemeral_aws/templates/cloudformation/: __init__.py  bastion.yml  ec2_worker.yml  ecs_worker.yml  lambda_worker.yml  vpc.yml
parsl_ephemeral_aws/templates/terraform/: __init__.py
parsl_ephemeral_aws/templates/terraform/bastion/: main.tf  outputs.tf  variables.tf
parsl_ephemeral_aws/templates/terraform/ec2_worker/: main.tf
parsl_ephemeral_aws/utils/: __init__.py  aws.py  localstack.py  logging.py  serialization.py
scripts/: localstack-wait.sh  run_tests.sh  setup_environment.sh  validate-dev-env.py
tests/: README.md  __init__.py  conftest.py  test_constants.py  test_localstack.py  test_provider.py  test_state.py
tests/aws/: conftest.py  test_detached_mode_e2e.py  test_globus_compute_e2e.py  test_serverless_mode_e2e.py  test_spot_e2e.py  test_standard_mode_e2e.py  test_state_backends_e2e.py
tests/bats/: README.md  setup_helper.bash  test_environment.bats  test_setup_environment.bats
tests/integration/: test_autoscaling_workflows.py  test_detached_mode_spot_fleet_integration.py  test_error_handling_integration.py  test_job_lifecycle.py  test_localstack_modes.py  test_multinode_workflows.py  test_provider_lifecycle.py  test_provider_restart.py  test_serverless_mode_spot_fleet_integration.py  test_spot_fleet_integration.py  test_spot_interruption_integration.py  test_spot_interruption_localstack.py  test_state_persistence_integration.py  test_workflow_error_scenarios.py  test_workflow_state_persistence.py
tests/security/: __init__.py  test_audit.py  test_credential_management.py  test_encryption.py  test_network_security.py
tests/unit/: test_aws_mocking.py  test_detached_mode.py  test_detached_mode_spot_fleet.py  test_error_handling.py  test_globus_compute_provider.py  test_provider_edge_cases.py  test_provider_interface.py  test_robust_error_handling.py  test_serverless_mode.py  test_serverless_mode_spot_fleet.py  test_spot_fleet.py  test_spot_fleet_cleanup.py  test_spot_fleet_instance_types.py  test_spot_interruption.py  test_standard_mode.py  test_state_error_handling.py  test_vpc_manager.py
tools/: AMI_INSTALLATION_LOG.md  BLOG_POST.md  CONTAINER_EXECUTION_STATUS.md  CONTAINER_PATHS_ANALYSIS.md  CONTAINER_SOLUTION_SUMMARY.md  DATA_MOVEMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile.parsl-base  GLOBUS_COMPUTE_INTEGRATION.md  PHASE2_CONTAINER_RESEARCH.md  PHASE2_CONTAINER_SUCCESS.md  PHASE2_PLANNING.md  README.md  README_PHASE15_ENHANCED.md  USAGE_GUIDE.md  aws_container_executor_test.py  awsproviderstate.json  build_ami.py  clean_simple_test.py  cleanup_aws_resources.py  cleanup_resources.py  complete_user_e2e_test.py  conclusive_test.py  config.yaml  config_loader.py  container_executor.py  container_runtime.py  custom_provider_test.py  debug_container_execution.py  debug_container_lifecycle.py  debug_containerized_worker.py  debug_docker_availability.py  debug_live_instance.py  debug_simple.py  debug_ssh_user.py  debug_submit_flow.py  debug_tunnel.py  debug_tunnel_creation.py  debug_worker_execution.py  diagnose_worker_logs.py  (+69 more)
(+3 files in other folders)
