[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsl-ephemeral-aws"
version = "0.1.0"
description = "A modern, flexible AWS provider for the Parsl parallel scripting library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Scott Friedman and Project Contributors", email = "email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "parsl>=1.2.0",
    "boto3>=1.20.0",
    "botocore>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "flake8>=3.9.0",
    "mypy>=0.812",
    "black>=21.5b2",
    "isort>=5.9.0",
    "moto>=3.1.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/scttfrdmn/parsl-aws-provider"
"Bug Tracker" = "https://github.com/scttfrdmn/parsl-aws-provider/issues"
"Documentation" = "https://parsl-ephemeral-aws.readthedocs.io"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=parsl_ephemeral_aws"