[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsl-ephemeral-aws"
version = "0.1.0"
description = "A modern, flexible AWS provider for the Parsl parallel scripting library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Scott Friedman and Project Contributors", email = "email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "parsl>=1.2.0",
    "boto3>=1.20.0",
    "botocore>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "pytest-mock>=3.0.0",
    "coverage>=6.0",
    "ruff>=0.1.0",
    "mypy>=0.812",
    "black>=21.5b2",
    "isort>=5.9.0",
    "bandit>=1.7.0",
    "pre-commit>=2.15.0",
    "bump-my-version>=1.0.0",
]
test = [
    "moto>=3.1.0",
    "localstack>=2.0.0",
    "requests>=2.25.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

[project.urls]
"Homepage" = "https://github.com/scttfrdmn/parsl-aws-provider"
"Bug Tracker" = "https://github.com/scttfrdmn/parsl-aws-provider/issues"
"Documentation" = "https://parsl-ephemeral-aws.readthedocs.io"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "--strict-markers",
    "--cov=parsl_ephemeral_aws",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "-ra",
    "--tb=short"
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires LocalStack)",
    "aws: Tests requiring real AWS credentials",
    "slow: Slow-running tests",
    "localstack: Tests using LocalStack"
]

[tool.coverage.run]
source = ["parsl_ephemeral_aws"]
branch = true
omit = [
    "tests/*",
    "setup.py",
    "examples/*",
    "*/__init__.py",
    "*/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError:",
]
fail_under = 70
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "parsl_ephemeral_aws/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
